--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,8 +280,18 @@ main{
 
 /* FEATURES SECTION */
 
-.features .col33{
+/* .features .col33{
   padding: 20px 30px;
+} */
+
+.features .col33-features:nth-child(1) {
+  margin-right:25px;
+}
+.features .col33-features:nth-child(2) {
+  margin:0 5px;
+}
+.features .col33-features:nth-child(3) {
+  margin-left:25px;
 }
 
 .features img{
@@ -316,7 +326,7 @@ main{
   background-color: #f5f5f5;
   height: 24vw;
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .col-mid-content{
@@ -327,6 +337,7 @@ main{
 .clients-list .col-mid {
   padding: 30px 10px 30px 10px;
   background-color: #f5f5f5;
+  overflow: scroll;
 }
 
 .clients-list .col-mid  img{
@@ -350,22 +361,25 @@ main{
 }
 
 .clients-list .square.active{
-  border: 8px solid rgba(255, 255, 255, 0.5);
+  border: 10px solid rgba(255, 255, 255, 0.5);
+}
+
+.clients-list .square:hover{
+  border: 10px solid rgba(255, 255, 255, 0.5);
 }
 
 .clients-list .square svg{
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
-  fill: white;
-  width: 60%;
-  height: auto;
+  transform: scale(0.5) translate(-95%, -96%);
+  /* fill: white; */
+  filter: invert(1);
+  width: 100%;
 }
 
 #designit{
   background-color: #a0d39b;
-  color: white;
 }
 
 #arizona{
